3rdparty/scitech/INCLUDE/GM/GM.H


typedef enum {
	GM_STRETCH_1x1,
	GM_STRETCH_1x2,
	GM_STRETCH_2x2,
	} GM_stretchType;
typedef enum {
	GM_MODE_8BPP		= 0x01,
	GM_MODE_16BPP		= 0x02,
	GM_MODE_24BPP		= 0x04,
	GM_MODE_32BPP		= 0x08,
	GM_ONLY_2D_ACCEL	= 0x10,
	GM_ONLY_3D_ACCEL	= 0x20,
	GM_ALLOW_WINDOWED	= 0x40,
	GM_MODE_ALLBPP		= 0x0F,
	} GM_modeFlagsType;
typedef enum {
	kbGrayEnter     = 0xE00D,
	kbGrayMinus     = 0x4A2D,
	kbGrayPlus      = 0x4E2B,
	kbGrayTimes     = 0x372A,
	kbGrayDivide    = 0x36E0,
	kbF1            = 0x3B00,
	kbF2            = 0x3C00,
	kbF3            = 0x3D00,
	kbF4            = 0x3E00,
	kbF5            = 0x3F00,
	kbF6            = 0x4000,
	kbF7            = 0x4100,
	kbF8            = 0x4200,
	kbF9            = 0x4300,
	kbF10           = 0x4400,
	kbF11           = 0x8500,
	kbF12           = 0x8600,
	kbLeft          = 0x4B00,
	kbRight         = 0x4D00,
	kbUp            = 0x4800,
	kbDown          = 0x5000,
	kbIns           = 0x5200,
	kbDel           = 0x5300,
	kbHome          = 0x4700,
	kbEnd           = 0x4F00,
	kbPgUp          = 0x4900,
	kbPgDn          = 0x5100,
	} GM_keyCodes;
typedef struct {
	ibool				useWinDirect;
	ibool				useDirectDraw;
	ibool				useVGA;
    ibool				useVGAX;
	ibool				useVBE;
    ibool				useLinear;
	ibool				useVBEAF;
    ibool				useFullscreenDIB;
	ibool 				useHWOpenGL;
	MGL_glOpenGLType	openGLType;
	GM_modeFlagsType	modeFlags;
	} GM_driverOptions;
typedef struct {
	int				mode;
	int				xRes;
	int				yRes;
	int				bitsPerPixel;
	int				pages;
	ulong			flags;
	char			driverName[13];
	GM_stretchType	stretch;
	GM_stretchType	windowedStretch;
	} GM_modeInfo;
typedef struct {
	MGLDC   			*dc;
	MGLDC   			*dispdc;
	MGLDC   			*memdc;
	int					driver;
	int					numModes;
	int					numFullscreenModes;
	ulong				modeFlags;
	GM_modeInfo			modeList[grMAXMODE+1];
#ifdef __WINDOWS__
	MGL_HWND			mainWindow;
#endif
	} GMDC;
typedef void (*GM_drawFunc)(void);
typedef void (*GM_keyDownFunc)(
	event_t *evt);
typedef void (*GM_keyRepeatFunc)(
	event_t *evt);
typedef void (*GM_keyUpFunc)(
	event_t *evt);
typedef void (*GM_mouseDownFunc)(
	event_t *evt);
typedef void (*GM_mouseUpFunc)(
	event_t *evt);
typedef void (*GM_mouseMoveFunc)(
	event_t *evt);
typedef void (*GM_eventFunc)(
	event_t *evt);
typedef void (*GM_modeSwitchFunc)(
	GM_modeInfo *mode,
    ibool windowed);
typedef ibool (*GM_preModeSwitchFunc)(
	GM_modeInfo *mode,
    ibool windowed);
typedef void (*GM_gameFunc)(void);
typedef void (*GM_exitFunc)(void);
typedef void (*GM_activateFunc)(
	ibool active);
typedef ibool (*GM_modeFilterFunc)(
	int xRes,
    int yRes,
    int bits,
    ulong flags);
void 	MGLAPI GM_initSysPalNoStatic(ibool flag);
void 	MGLAPI GM_initPath(const char *MGLPath);
void 	MGLAPI GM_initWindowPos(int x,int y);
void	MGLAPI GM_setModeFilterFunc(GM_modeFilterFunc filter);
void	MGLAPI GM_setDriverOptions(GM_driverOptions *opt);
GMDC * 	MGLAPI GM_init(const char *windowTitle);
void 	MGLAPI GM_setDrawFunc(GM_drawFunc func);
void 	MGLAPI GM_setKeyDownFunc(GM_keyDownFunc func);
void 	MGLAPI GM_setKeyRepeatFunc(GM_keyRepeatFunc func);
void 	MGLAPI GM_setKeyUpFunc(GM_keyUpFunc func);
void 	MGLAPI GM_setMouseDownFunc(GM_mouseDownFunc func);
void 	MGLAPI GM_setMouseUpFunc(GM_mouseUpFunc func);
void 	MGLAPI GM_setMouseMoveFunc(GM_mouseMoveFunc func);
void 	MGLAPI GM_setEventFunc(GM_eventFunc func);
void 	MGLAPI GM_setGameLogicFunc(GM_gameFunc func);
void 	MGLAPI GM_setExitFunc(GM_exitFunc func);
void 	MGLAPI GM_setAppActivate(GM_activateFunc func);
void 	MGLAPI GM_setPreModeSwitchFunc(GM_preModeSwitchFunc func);
void 	MGLAPI GM_setModeSwitchFunc(GM_modeSwitchFunc func);
void 	MGLAPI GM_setSuspendAppCallback(MGL_suspend_cb_t saveState);
void	MGLAPI GM_registerEventProc(MGL_WNDPROC winproc);
void	MGLAPI GM_registerMainWindow(MGL_HWND hwndMain);
ibool	MGLAPI GM_chooseMode(GM_modeInfo *mode,ibool *startWindowed);
ibool 	MGLAPI GM_findMode(GM_modeInfo *mode,int xRes,int yRes,int bits);
ibool	MGLAPI GM_setMode(GM_modeInfo *info,ibool windowed,int pages,ibool forceSysMem);
ibool 	MGLAPI GM_startOpenGL(MGL_glContextFlagsType flags);
void	MGLAPI GM_swapBuffers(MGL_waitVRTFlagType waitVRT);
void 	MGLAPI GM_swapDirtyBuffers(region_t *dirty,MGL_waitVRTFlagType waitVRT);
void 	MGLAPI GM_setPalette(palette_t *pal,int numColors,int startIndex);
void 	MGLAPI GM_realizePalette(int numColors,int startIndex,int waitVRT);
void 	MGLAPI GM_mainLoop(void);
void 	MGLAPI GM_processEvents(void);
void 	MGLAPI GM_processEventsWin(void);
void 	MGLAPI GM_exit(void);
ibool	MGLAPI GM_getHaveWin31(void);
ibool	MGLAPI GM_getHaveWin95(void);
ibool	MGLAPI GM_getHaveWinNT(void);
ibool	MGLAPI GM_getDoDraw(void);
ibool	MGLAPI GM_getExitMainLoop(void);